--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "Horocek.github.io/weather",
+  "homepage": "weather",
   "name": "weather",
   "version": "0.1.0",
   "private": true,
